# langchain-amazon-nova

./: AGENTS.md  README.md
.github/scripts/: check_diff.py  get_min_versions.py
.github/workflows/: _release.yml  _test_release.yml
libs/amazon_nova/: Makefile  Notice.txt  README.md  pyproject.toml
libs/amazon_nova/langchain_amazon_nova/: __init__.py  chat_models.py  models.py
libs/amazon_nova/langchain_amazon_nova/data/: _profiles.py
libs/amazon_nova/langchain_nova/: __init__.py  chat_models.py  models.py
libs/amazon_nova/scripts/: example_messages.json  nova_chat.py  nova_test.py  nova_web_search.py
libs/amazon_nova/tests/: conftest.py
libs/amazon_nova/tests/integration_tests/: test_all_models.py  test_api_response_format.py  test_standard.py  test_structured_output.py
libs/amazon_nova/tests/unit_tests/: __init__.py  test_chat_models.py  test_exceptions.py  test_models.py  test_standard.py  test_structured_output.py
libs/nova/: Makefile  pyproject.toml
libs/nova/langchain_nova/: __init__.py  chat_models.py  output_parsers.py
libs/nova/langchain_nova/nova/: __init__.py  _client.py  _exceptions.py  nova.py
libs/nova/langchain_nova/nova/types/: __init__.py  _types.py
libs/nova/tests/: __init__.py
libs/nova/tests/integration_tests/: __init__.py  test_standard.py
libs/nova/tests/unit_tests/: test_chat_models.py  test_standard.py
libs/samples/: README.md  interactive_chat.py  pyproject.toml
libs/samples/jupyter/: chains_patterns.ipynb  memory_patterns.ipynb  output_parsers.ipynb  prompt_templates.ipynb  rag_patterns.ipynb
libs/samples/langchain/: README.md
libs/samples/langchain/jupyter/: README.md  chains_patterns.ipynb  memory_patterns.ipynb  output_parsers.ipynb  prompt_templates.ipynb  pyproject.toml
libs/samples/langchain/python/: chains_example.py  memory_example.py  output_parsers.py  pyproject.toml  rag_example.py
libs/samples/langchain_patterns/: README.md  chains_example.py  memory_example.py  output_parsers.py  prompt_templates.py  rag_example.py
libs/samples/langgraph/: README.md
libs/samples/langgraph/jupyter/: agent_with_tools.ipynb  multi_agent.ipynb  pyproject.toml  reflection_agent.ipynb  simple_chatbot.ipynb
libs/samples/langgraph/python/: agent_with_tools.py  multi_agent.py  pyproject.toml
libs/samples/langraph_patterns/: README.md  multi_agent.py  reflection_agent.py  simple_chatbot.py
libs/samples/scripts/: README.md  nova_chat.py  nova_test.py  nova_web_search.py
libs/samples/simple_chat/: README.md  advanced_parameters.py  async_chat.py  basic_chat.py  chat_with_tools.py  conversation.py  error_handling.py  interactive_chat.py  pyproject.toml  streaming_chat.py  tool_use.py  vision_chat.py
samples/: README.md
samples/langchain/jupyter/: chains_patterns.ipynb  memory_patterns.ipynb  output_parsers.ipynb  prompt_templates.ipynb  pyproject.toml  rag_patterns.ipynb
samples/langchain/python/: output_parsers.py  prompt_templates.py  pyproject.toml  rag_example.py
samples/langgraph/: README.md
samples/langgraph/jupyter/: agent_with_tools.ipynb  multi_agent.ipynb  pyproject.toml  reflection_agent.ipynb  simple_chatbot.ipynb
samples/langgraph/python/: agent_with_tools.py  pyproject.toml  reflection_agent.py  simple_chatbot.py
samples/simple_chat/: README.md  advanced_parameters.py  async_chat.py  basic_chat.py  chat_with_tools.py  conversation.py  error_handling.py  pyproject.toml  structured_output.py  voice_to_text.py
