[project]
name = "langchain-nova-samples"
version = "0.1.0"
description = "Sample code demonstrating langchain-nova usage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-nova",
    "langchain-core>=1.0.2",
]

[project.optional-dependencies]
patterns = [
    "langchain>=0.3.0",
    "langchain-text-splitters>=0.3.0",
]
dev = [
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
]
