[project]
name = "langchain-nova-samples"
version = "0.1.0"
description = "Sample code demonstrating langchain-nova usage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-nova @ git+https://github.com/nova-ai-api/langchain-nova.git#subdirectory=libs/amazon_nova",
    "langchain-core>=1.0.2",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.4",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
patterns = [
    "langchain>=0.3.0",
    "langchain-text-splitters>=0.3.0",
]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
]
