[project]
name = "langchain-amazon-nova-samples"
version = "0.1.0"
description = "Sample code demonstrating langchain-amazon-nova usage"
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.10"
dependencies = [
    "langchain-amazon-nova",
    "langchain-core>=1.0.2",
    "pandas>=2.0.0",
    "sounddevice",
    "soundfile",
    "numpy"
]

[project.optional-dependencies]
patterns = [
    "langchain>=0.3.0",
    "langchain-text-splitters>=0.3.0",
]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
]
