[project]
name = "langchain-amazon-nova-samples-jupyter"
version = "0.1.0"
description = "Jupyter notebook examples using LangChain with Amazon Nova"
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.10"
dependencies = [
    "langchain-amazon-nova @ git+https://github.com/amazon-nova-api/langchain-amazon-nova.git#subdirectory=libs/amazon_nova",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
