[project]
name = "langgraph-nova-samples-python"
version = "0.1.0"
description = "Python examples using LangGraph with Amazon Nova"
requires-python = ">=3.10"
dependencies = [
    "langchain-nova",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
